Add tests for any object to string cast.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.990106 2025-11-07
   [Changes]
     * Any object to numeric converion returns 0 if the object is undef.
+    * Allow any object to string conversion.
   [New Features]
     * Add numeric_object_to_string_no_mortal native API.
     * Add numeric_object_to_string native API.
