--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+0.990108 2025-12-03
+  [New Features]
+    * Add say_stderr native API.
+    * Add print STDERR syntax.
+    
+      print STDERR "Hello";
+      
+    * Add say STDERR syntax
+    
+      say STDERR "Hello";
+      
 0.990107 2025-11-18
   [Bug Fix]
     * Fix bugs of variable length argument with options.
