--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.990109 2025-12-08
+  [Bug Fix]
+    * Fix a bug of exists operator.
+    
 0.990108 2025-12-03
   [New Features]
     * Add say_stderr native API.
