--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.990111 2026-01-20
   [Internal Changes]
     * Refactor logical not operator AST logic.
+    * Refactor logical or operator AST logic.
 0.990110 2026-01-19
   [Internal Changes]
     * Refactor defined-or-operator AST logic.
