--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@
   [Internal Changes]
     * Refactor logical not operator AST logic.
     * Refactor logical or operator AST logic.
+    * Refactor logical and operator AST logic.
 0.990110 2026-01-19
   [Internal Changes]
     * Refactor defined-or-operator AST logic.
