--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@
     * Refactor logical not operator AST logic.
     * Refactor logical or operator AST logic.
     * Refactor logical and operator AST logic.
+  [Bug Fix]
+    * Fix a bug that using reference types in field definitions caused an assertion failure instead of a compilation error.
 0.990110 2026-01-19
   [Internal Changes]
     * Refactor defined-or-operator AST logic.
