--- a/Changes
+++ b/Changes
@@ -6,7 +6,9 @@
   [Bug Fix]
     * Fix a bug that using reference types in field definitions caused an assertion failure instead of a compilation error.
     * Fix a bug that private methods of classes allowed by the allow statement could not be called within anonymous methods.
-    
+  [New Features]
+    * Add get_basic_type_name_by_id method to Fn class.
+  
 0.990110 2026-01-19
   [Internal Changes]
     * Refactor defined-or-operator AST logic.
