--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@
     * Add get_basic_type_name_by_id method to Fn class.
   [Compilation Error Message Improvement]
     * Improve the compilation error message when a method call is not found.
+    * Add a feature to suggest the closest method name when a method name is not found in a method call. The compiler now outputs an error message like "Did you mean Foo#baz?". This search includes methods in parent classes.
     
 0.990110 2026-01-19
   [Internal Changes]
