--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.990115 2026-01-23
+  [New Features]
+    * Added the -Mblib option to the spvm command to support the Perl blib directory, which is useful for testing native modules.
+
 0.990114 2026-01-22
   [Changes]
     * Set the "file" member of the basic type to a virtual file name such as "string.spvm" even for built-in types.
