Added the missing documentation for the -w, and -M options in the spvm command's Usage and POD. #826

--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
   [New Features]
     * Added the -Mblib option to the spvm command to support the Perl blib directory, which is useful for testing native modules.
     * Add the warn_level operator. This operator throws an exception with the die operator if the level is greater than 0, prints a warning message with the warn operator if the level is 0, and does nothing if the level is less than 0.
+  [Document Improvement]
+    * Added the missing documentation for the -w, and -M options in the spvm command's Usage and POD.
     
 0.990114 2026-01-22
   [Changes]
