--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
   
   [New Features]
     * Added a new Native Method API get_abs_name to retrieve the absolute name of a method.
+    * Added the CallerInfo class to represent caller information, including the method name, the file name, and the line number.
+    * The CallerInfo class is now loaded by default.
   
   [Backward Incompatible Changes]
     * In SPVM naitve API, added new arguments (func_name, file, and line) to the following function pointers to support the caller operator:
