--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
     * Added a new Native Method API get_abs_name to retrieve the absolute name of a method.
     * Added the CallerInfo class to represent caller information, including the method name, the file name, and the line number.
     * The CallerInfo class is now loaded by default.
+    * Added stack_index_call_depth, stack_index_caller_info_stack, and stack_index_caller_info_stack_record_size native APIs to store stack indices.
+    * Added get_call_depth, get_caller_info_stack, and get_caller_info_stack_record_size native APIs to provide safe and dynamic access to caller information.
   
   [Backward Incompatible Changes]
     * In SPVM naitve API, added new arguments (func_name, file, and line) to the following function pointers to support the caller operator:
