--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 0.990116 2026-01-24
   
+  [Changes]
+    * The runtime now pushes caller information (current method, caller name, file, and line) onto the caller stack within the runtime stack before each method call and pops it after the call. (Note: These changes are not yet tested.)
+  
   [New Features]
     * Added a new Native Method API get_abs_name to retrieve the absolute name of a method.
     * Added the CallerInfo class to represent caller information, including the method name, the file name, and the line number.
