--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 0.990118 2026-01-26
   [New Features]
     * Added the get_current_method function to the Native API to retrieve the currently executing method from the caller stack.
+    * Added the Fn#get_current_method_name method to the Fn class to get the name of the currently executing method.
+    * Added the Fn#get_current_basic_type_name method to the Fn class to get the basic type name of the currently executing method.
     
   [Incompatibe Changes]
     * Renamed the name field to method_abs_name in the CallerInfo class to more accurately describe that it stores the absolute name of a method.
