--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     * Added the get_current_method function to the Native API to retrieve the currently executing method from the caller stack.
     * Added the Fn#get_current_method_name method to the Fn class to get the name of the currently executing method.
     * Added the Fn#get_current_basic_type_name method to the Fn class to get the basic type name of the currently executing method.
+    * Add the caller native API to retrieve caller information at a specific level.
     
   [Incompatibe Changes]
     * Renamed the name field to method_abs_name in the CallerInfo class to more accurately describe that it stores the absolute name of a method.
