--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.990119 2026-01-27
   [New Features]
     * Add die_v2 to SPVM_ENV to support optimized exception handling with metadata, which will eventually replace die as an alias after all native modules are migrated.
+    * Add build_exception_message and build_exception_message_no_mortal to the SPVM_ENV structure and the Native API to reconstruct full exception messages with stack traces from metadata.
     
 0.990118 2026-01-26
   [New Features]
