--- a/Changes
+++ b/Changes
@@ -3,6 +3,11 @@
     * Add die_v2 to SPVM_ENV to support optimized exception handling with metadata, which will eventually replace die as an alias after all native modules are migrated.
     * Add build_exception_message and build_exception_message_no_mortal to the SPVM_ENV structure and the Native API to reconstruct full exception messages with stack traces from metadata.
     * Add the Fn#build_exception_message method to reconstruct exception messages with stack traces.
+  [Incompatible Changes]
+    * The exception message ($@) now only contains the raw message specified by the "die" statement, and no longer includes the stack trace by default.
+    * To get the exception message with a full stack trace, use the Fn#build_exception_message method.
+    * Exception messages are now constructed using the internal caller information stack instead of being concatenated during the exception propagation process.
+    * This change significantly improves performance by removing the overhead of string concatenation when an exception is caught by an "eval" block.
     
 0.990118 2026-01-26
   [New Features]
