--- a/Changes
+++ b/Changes
@@ -10,6 +10,7 @@
     * This change significantly improves performance by removing the overhead of string concatenation when an exception is caught by an "eval" block.
     * Binary compatibility is broken due to changes in the exception handling logic within the VM and Precompile.
     * This includes updates to opcode definitions and their operands. All SPVM modules and executables must be recompiled.
+    * die native API no longer sets the function name, file name, and line number in the exception message to prevent memory errors on specific architectures.
     
 0.990118 2026-01-26
   [New Features]
