--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.990124 2026-01-31
+  [New Features]
+    * Added the set_method_begin_cb, get_method_begin_cb, set_method_end_cb, and get_method_end_cb native APIs to support method hooks for profilers.
+    
 0.990123 2026-01-31
   [New Features]
     * Support the optimize option in create_make_rule_native and create_make_rule_precompile in SPVM::Builder::Util::API.
