Added Fn#get_call_depth method to get the current call stack depth.#841

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.990124 2026-01-31
   [New Features]
     * Added the set_method_begin_cb, get_method_begin_cb, set_method_end_cb, and get_method_end_cb native APIs to support method hooks for profilers.
+    * Added Fn#get_call_depth method to get the current call stack depth.
     
 0.990123 2026-01-31
   [New Features]
