--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 0.990126 2026-02-02
   [New Features]
-    * Add get_monitor_var_type to the BasicType native API.
+    * Add get_monitor_var_type to the BasicType native API to get the type of the $^MONITOR special variable..
     * Add has_monitor_var basic type native API to check for the presence of the $^MONITOR special variable.
+    * Add the $^MONITOR special variable to provide the monitoring type information.
     
 0.990125 2026-02-02
   [New Features]
