--- a/Changes
+++ b/Changes
@@ -1,3 +1,13 @@
+0.990129 2026-02-11
+  [New Features]
+    * Add set_byte_object_value native API to set the value of a Byte object.
+    * Add set_short_object_value native API to set the value of a Short object.
+    * Add set_int_object_value native API to set the value of an Int object.
+    * Add set_long_object_value native API to set the value of a Long object.
+    * Add set_float_object_value native API to set the value of a Float object.
+    * Add set_double_object_value native API to set the value of a Double object.
+    * Support mutability for numeric objects (Byte, Short, Int, Long, Float, Double) through Native APIs to improve performance in data-intensive operations like DBI's bind_params.
+
 0.990128 2026-02-11
   [New Features]
     * Add is_utf8 native API to check if a string is a valid UTF-8 sequence.
