--- a/Changes
+++ b/Changes
@@ -6,7 +6,9 @@
     * Add set_long_object_value native API to set the value of a Long object.
     * Add set_float_object_value native API to set the value of a Float object.
     * Add set_double_object_value native API to set the value of a Double object.
-    * Support mutability for numeric objects (Byte, Short, Int, Long, Float, Double) through Native APIs to improve performance in data-intensive operations like DBI's bind_params.
+    * Add clone, make_read_only, and is_read_only methods to numeric classes (Byte, Short, Int, Long, Float, Double).
+  [Incompatible Changes]
+    * Numeric objects (Byte, Short, Int, Long, Float, Double) are now mutable by default. This is a significant change from previous versions where these objects were immutable. Any code assuming the immutability of these objects should be reviewed.
 
 0.990128 2026-02-11
   [New Features]
