--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.990130 2026-02-13
+  [Changes]
+    * Allow casting numeric object types to string type.
+  
 0.990129 2026-02-11
   [New Features]
     * Add set_byte_object_value native API to set the value of a Byte object.
