--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.990132 2026-02-17
+  
+  [Incompatible Changes]
+    * Remove the is_not_permitted and set_is_not_permitted native APIs and related implementation from the SPVM core to eliminate insecure software-based access control.
+
 0.990131 2026-02-16
   [New Features]
     * Add getrandom method to Fn class to get OS-specific secure random bytes.
