--- a/Changes
+++ b/Changes
@@ -9,11 +9,11 @@
       
       2. Reinstall them:
          
-         util/cpandeps --native-class-only SPVM::Your::Module | grep -vx "SPVM" | xargs cpanm --reinstall
+         util/cpandeps --verbose --native-class-only SPVM::Mojolicious | grep -vx "SPVM" | xargs cpanm --reinstall
       
       3. For a quick fix without downloading the script:
          
-         curl -sL https://raw.githubusercontent.com/yuki-kimoto/SPVM/master/util/cpandeps | perl - --native-class-only SPVM::Your::Module | grep -vx "SPVM" | xargs cpanm --reinstall
+         curl -sL https://raw.githubusercontent.com/yuki-kimoto/SPVM/refs/heads/master/util/cpandeps | perl - --verbose --native-class-only SPVM::Mojolicious | grep -vx "SPVM" | xargs cpanm --reinstall
       
       
   [Break Binary Compatiblity]
