--- a/Changes
+++ b/Changes
@@ -3,7 +3,8 @@
   [Incompatible Changes]
     * Rename load_spvm_archive to use_spvm_archive in SPVM::Builder::Config::Exe.
     * Rename --load-spvm-archive option to --spvm-archive in spvmcc. 
-
+    * Rename spvmcc.json to spvm-archive.json in SPVM archive.
+    
 0.990132 2026-02-17
   
   [New Features]
