Rename "Language Specification" to "Language Standard" in spvmdist template.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.990135 2026-02-22
+  
+  [Changes]
+    * Rename "Language Specification" to "Language Standard" in spvmdist template.
+
 0.990134 2026-02-20
 
   [Incompatible Changes]
