--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.990135 2026-02-25
+  [New Features]
+    * Add language and dialect fields to SPVM::Builder::Config.
+    
 0.990135 2026-02-22
   
   [Changes]
