--- a/Changes
+++ b/Changes
@@ -4,7 +4,8 @@
     * Set language field in new_c and new_cpp methods.
   [Incompatible Change]
     * SPVM::Builder::Config#new method no longer sets a default cc, and new_c method now sets it explicitly.
-  
+    * Change the default ld field in SPVM::Builder::Config to clang++/g++ instead of $Config{ld} to support C/C++ mixed linking.
+    
 0.990135 2026-02-22
   
   [Changes]
