--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
   [Incompatible Change]
     * SPVM::Builder::Config#new method no longer sets a default cc, and new_c method now sets it explicitly.
     * Change the default ld field in SPVM::Builder::Config to clang++/g++ instead of $Config{ld} to support C/C++ mixed linking.
+    * Abstract thread flags and winpthread static linking into SPVM::Builder::Config on Windows.
     
 0.990135 2026-02-22
   
