--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
-0.990137 2026-02-25
+0.990137 2026-02-26
   [New Features]
     * Add after_link_cbs field and add_after_link_cb method in SPVM::Builder::Config to support callbacks after linking.
     * Add clear_system_settings method to SPVM::Builder::Config to clear default environment settings.
+    * SPVM::Builder::Config: Add warn_ccflags, language_ccflags, compiler_ccflags, runtime_ccflags, ld_ccflags, warn_ldflags and debug_ldflags fields.
     
 0.990136 2026-02-25
   [New Features]
